[metadata]
name = AdSyncEntitiesViaMQTT
version = 0.0.1
description = Appdaemon Sync Entities Via MQTT
author = Ross Rosen
author_email = rrosen326@gmail.com
url = https://github.com/rr326/ad_sync_entities

[options]
packages = find:
install_requires = 
    appdaemon
    cerberus
python_requires = >=3.8.0